--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -44,11 +44,50 @@ img {
 }
 
 blockquote {
-  padding: 1.5em;
-  margin: 0;
-  font-size: 0.88em;
-  background: #42e6ff;
-  border-radius: $border-radius;
+
+  display:inline-block;
+  font-family:sans-serif;
+  margin:1em;
+  max-width:20em;
+  blockquote {
+    display:inline-block;
+    margin:0;
+    padding:1em;
+    position:relative;
+    &:before {
+      color:#f90;
+      content:"\201C";
+      font-size:4em;
+      left:0;
+      line-height:.75em;
+      position:absolute;
+      top:0;
+      transform:scale(2, 8);
+      transform-origin:top;
+    }
+    &:after {
+      color:#f90;
+      content:"\201D";
+      font-size:4em;
+      line-height:.75em;
+      position:absolute;
+      right:0;
+      top:0;
+      transform:scale(2, 8);
+      transform-origin:top;
+    }
+    > * {
+      padding:0 2em;
+    }
+    cite {
+      color:#c60;
+      display: block;
+      font-style: normal;
+      text-align: right;
+      text-transform:uppercase;
+    }
+  }
+  
 
   p {
     margin: 0;
