--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-This is the footer. Include anything you'd like here, like a link to an <a class="internal-link" href="/about">About</a> page.
+If you loved these raw ideas, you'd love to hear from me.  <a class="internal-link" href="/about">Click here </a> to subscribe to my weekly newsletter.
