--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-If you loved these raw ideas, you'd love to hear from me.  <a class="internal-link" href="/about">Click here </a> to subscribe to my weekly newsletter.
+If you loved these raw ideas, you'd love to hear from me.  <a href="https://timelessinsights.beehiiv.com/subscribe">Click here </a> to subscribe to my weekly newsletter.
